<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingTop="320dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"

    tools:context=".RegisterFragment">


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="textEmailAddress"
        android:height="100dp"
        android:hint="@string/email_hint"
        />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="textPassword"
        android:height="100dp"
        android:hint="@string/pwd_hint"
        />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="text"
        android:height="100dp"
        android:hint="@string/username_hint"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:paddingTop="40dp"
        android:text="@string/Signup"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />



</LinearLayout>