<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entryReader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".journal.EntryReaderFragment">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/date"
        android:textColor="@color/medium_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="319dp"
        android:layout_height="59dp"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/title"
        android:textColor="@color/dark_blue"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/entryTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/entryTextView"
        android:layout_width="314dp"
        android:layout_height="462dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/journal_entry"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/exitReadEntryButton"
        android:layout_width="85dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="21dp"
        android:background="#00FFFFFF"
        android:rotation="180"
        android:text="@string/arrow"
        android:textAlignment="center"
        android:textColor="@color/medium_blue"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moodImageView"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/smilingface"
        android:contentDescription="@string/mood_image" />

</androidx.constraintlayout.widget.ConstraintLayout>