
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingTop="300dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="textPassword"
        android:height="100dp"
        android:hint="@string/pwd_hint"
        />
    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:paddingTop="40dp"

        android:text="@string/Signin"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_textview"
        android:text="@string/nav_Signup"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:paddingTop="90dp"
        android:textSize="30sp" />





</LinearLayout>




