<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/journalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/about"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="393dp"
        android:layout_height="463dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/entryTextView"
                android:layout_width="324dp"
                android:layout_height="133dp"
                android:layout_marginTop="13dp"
                android:fontFamily="sans-serif"
                android:text="@string/about_app"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="325dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#EDB8A3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entryTextView" />

            <TextView
                android:id="@+id/plantOptionsTextView"
                android:layout_width="324dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/playfair_display"
                android:text="Plant Options"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/faqsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/faqs"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/growthStagesTextView" />

            <TextView
                android:id="@+id/faq1TextView"
                android:layout_width="323dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq1"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faqsTextView" />

            <TextView
                android:id="@+id/faq1AnswerTextView"
                android:layout_width="323dp"
                android:layout_height="108dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq1Answer"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq1TextView" />

            <TextView
                android:id="@+id/faq2TextView"
                android:layout_width="323dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq2"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq1AnswerTextView" />

            <TextView
                android:id="@+id/faq2AnswerTextView"
                android:layout_width="322dp"
                android:layout_height="82dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq2Answer"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq2TextView" />

            <TextView
                android:id="@+id/faq3TextView"
                android:layout_width="323dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq3"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq2AnswerTextView" />

            <TextView
                android:id="@+id/faq3AnswerTextView"
                android:layout_width="323dp"
                android:layout_height="89dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq3Answer"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq3TextView" />

            <TextView
                android:id="@+id/faq4TextView"
                android:layout_width="323dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq4"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq3AnswerTextView" />

            <TextView
                android:id="@+id/faq4AnswerTextView"
                android:layout_width="323dp"
                android:layout_height="89dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq4Answer"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq4TextView" />

            <TextView
                android:id="@+id/faq5TextView"
                android:layout_width="323dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq5"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq4AnswerTextView" />

            <TextView
                android:id="@+id/faq5AnswerTextView"
                android:layout_width="323dp"
                android:layout_height="120dp"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:text="@string/faq5Answer"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq5TextView" />

            <ImageView
                android:id="@+id/peonyImageView"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="34dp"
                android:src="@mipmap/peony100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plantOptionsTextView" />

            <ImageView
                android:id="@+id/sunflowerImageView"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginTop="31dp"
                android:src="@mipmap/sunflower100"
                app:layout_constraintEnd_toStartOf="@+id/peonyImageView"
                app:layout_constraintStart_toEndOf="@+id/tulipImageView"
                app:layout_constraintTop_toBottomOf="@+id/plantOptionsTextView" />

            <ImageView
                android:id="@+id/tulipImageView"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="31dp"
                android:src="@mipmap/tulip100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plantOptionsTextView" />

            <TextView
                android:id="@+id/plantsTextView"
                android:layout_width="323dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/plant_names"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tulipImageView" />

            <TextView
                android:id="@+id/growthTextView"
                android:layout_width="324dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/growth_stages"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plantsTextView" />

            <TextView
                android:id="@+id/growthStagesTextView"
                android:layout_width="323dp"
                android:layout_height="380dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/plant_stages"
                android:textAlignment="textStart"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/growthTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="37dp"
        android:src="@mipmap/bloom_moods_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journalTextView" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:src="@mipmap/bloommoodslogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>